blog-grpc-go/k8s/expose-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grpc-nodeport-service
  name: grpc-nodeport-service
spec:
  type: NodePort
  selector:
    app: grpc-server
  ports:
    - targetPort: 8080
      protocol: TCP
      port: 8080
      nodePort: 32000
  sessionAffinity: None
