blog-grpc-go/k8s/monogo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mymongo
  name: mymongo
  namespace: grpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mymongo
  template:
    metadata:
      labels:
        app: mymongo
    spec:
      containers:
        - image: mongo
          name: mymongo
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mymongo
  name: mymongo
  namespace: grpc
spec:
  type: ClusterIP
  ports:
    - targetPort: 27017
      protocol: TCP
      port: 27017
  selector:
    app: mymongo
  sessionAffinity: None
