blog-grpc-go/k8s/react.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: react-server
  name: react-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-server
  template:
    metadata:
      labels:
        app: react-server
    spec:
      containers:
        - image: vikashsurin/react:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          name: react-server
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: react-server-service
  name: react-server-service
spec:
  type: NodePort
  selector:
    app: react-server
  ports:
    - targetPort: 80
      protocol: TCP
      port: 80
      nodePort: 32000
  sessionAffinity: None
