blog-grpc-go/k8s/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grpc-server
  name: grpc-server
  namespace: grpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-server
  template:
    metadata:
      labels:
        app: grpc-server
    spec:
      containers:
        - image: vikashsurin/http-server:latest
          name: grpc-server
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grpc-server
  name: grpc-server
  namespace: grpc
spec:
  type: LoadBalancer
  selector:
    app: grpc-server
  ports:
    - targetPort: 8080
      protocol: TCP
      port: 8080
  sessionAffinity: None
